[gd_scene load_steps=7 format=2]

[ext_resource path="res://game_assets/game_sprites/levels_sprites/test_zone_assets/tileset/block64x64-white.bmp" type="Texture" id=1]
[ext_resource path="res://game_assets/game_scripts/test_zone_scripts/gimmicks_scripts/Clif.gd" type="Script" id=2]
[ext_resource path="res://game_assets/audio/sfx/cliff_breaking.wav" type="AudioStream" id=3]
[ext_resource path="res://zones/test_zone_objects/cliff_part_object.tscn" type="PackedScene" id=4]
















[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 11 )

[node name="Clif" type="Node2D"]
script = ExtResource( 2 )
block = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )
one_way_collision = true

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="BreakSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="finished" from="BreakSound" to="." method="_on_BreakSound_finished"]
